--- a/7zpp-TestApp/7zpp-TestApp.VS2017.vcxproj
+++ b/7zpp-TestApp/7zpp-TestApp.VS2017.vcxproj
@@ -98,7 +98,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\..\boost_1_60_0\lib64-msvc-14.0\;$(SolutionDir)\..\googletest\build\googlemock\gtest\Debug\;..\7zip-cpp\Lib\x64\;</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)Lib\;$(SolutionDir)..\boost_1_60_0\lib64-msvc-14.0\;$(SolutionDir)..\googletest\build\googlemock\gtest\Debug\</AdditionalLibraryDirectories>
       <AdditionalDependencies>gtest.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -119,7 +119,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\boost-1_66\lib64\;$(SolutionDir)..\googletest\build\googlemock\gtest\Debug\;$(SolutionDir)Lib\x64\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)Lib\;$(SolutionDir)..\boost-1_66\lib64\;$(SolutionDir)..\googletest\build\googlemock\gtest\Debug\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>gtestd.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -144,7 +144,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\..\boost_1_60_0\lib64-msvc-14.0\;$(SolutionDir)\..\googletest\build\googlemock\gtest\Release\;..\7zip-cpp\Lib\x64\;</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)Lib\;$(SolutionDir)\..\boost_1_60_0\lib64-msvc-14.0\;$(SolutionDir)\..\googletest\build\googlemock\gtest\Release\</AdditionalLibraryDirectories>
       <AdditionalDependencies>gtest.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -169,7 +169,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\boost-1_66\lib64\;$(SolutionDir)..\googletest\build\googlemock\gtest\Release\;$(SolutionDir)Lib\x64\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)Lib\;$(SolutionDir)..\boost-1_66\lib64\;$(SolutionDir)..\googletest\build\googlemock\gtest\Release\</AdditionalLibraryDirectories>
       <AdditionalDependencies>gtest.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
