--- a/7zpp/7zpp.VS2017.vcxproj
+++ b/7zpp/7zpp.VS2017.vcxproj
@@ -344,6 +344,7 @@
     <ClCompile Include="SevenZipExtractor.cpp" />
     <ClCompile Include="SevenZipLibrary.cpp" />
     <ClCompile Include="SevenZipLister.cpp" />
+    <ClCompile Include="SevenZipWrapper.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug MBCS|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug MBCS|x64'">Create</PrecompiledHeader>
@@ -382,6 +383,7 @@
     <ClInclude Include="SevenZipExtractor.h" />
     <ClInclude Include="SevenZipLibrary.h" />
     <ClInclude Include="SevenZipLister.h" />
+    <ClInclude Include="SevenZipWrapper.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="UsefulFunctions.h" />
